# asr-speech-deepfake

./: .gitignore  README.md  pyproject.toml  requirements.txt  sentences.txt
asr/: __init__.py  config.py
asr/data/: __init__.py  common_voice.py  custom.py  dataset_config.py  registry.py  utils.py  vivos.py
asr/inference/: __init__.py  cli.py  streaming.py
asr/models/: __init__.py  factory.py
asr/training/: __init__.py  trainer.py
asr/utils/: __init__.py  audio.py  logging.py
configs/: whisper_small_vivos.yaml  whisper_small_vivos_custom.yaml
data/manifests/vivos/: test.jsonl  train.jsonl
scripts/: generate_tts_dataset.py  generate_vivos_manifest.py  prepare_dataset.py  serve_streaming.py  train.py  transcribe.py
